<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP80_Initialization_Seq" Id="{d9cd3753-1de4-4d0e-863d-76d1bcceef87}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP80_Initialization_Seq
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (SR80_Vert_servo_ctrl.Axis_In_Home)THEN
    OP80_Temp_hmeOK:=TRUE;
	OP80_HomeRunning:=FALSE;
	OP80_Homing_Seq:=0;
ELSE
	OP80_Temp_hmeOK:=FALSE;	
END_IF

CASE OP80_Homing_Seq OF
	0: IF (OP80_AutoSelected AND NOT OP80_HomeRunning AND NOT OP80_ErrorActive AND NOT  OP80_AutoRunning AND NOT OP80_StepRunning AND NOT OP80_Temp_hmeOK ) THEN
		OP80_HomeRunning:=TRUE;
		OP80_Homing_Seq:=10;	
	   END_IF
	10:IF (OP80_HomeRunning AND OP80_HMI_Homing)THEN 
		IF (SR80_Vert_servo_ctrl.Axis_In_Home) THEN 
			OP80_Homing_Seq:=20;
			SR80_Vert_servo_ctrl.Axis_Home_Cmd:=FALSE;
		ELSE
			SR80_Vert_servo_ctrl.Axis_Home_Cmd:=TRUE;
	    END_IF
	   END_IF		
	20:	OP80_Homing_Seq:=0;
		OP80_HomeRunning:=FALSE;
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="OP80_Initialization_Seq">
      <LineId Id="3" Count="23" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>